--- a/EcommWeb/shop/templates/landingpage.html
+++ b/EcommWeb/shop/templates/landingpage.html
@@ -48,7 +48,17 @@
               >
             </li>
           </ul>
-          <div>
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 mx-1">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="{% url 'aboutus' %}"
+                >About Us</a
+              >
+            </li>
+          </ul>
+             </div>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             {% if request.user.is_authenticated %}
               <li class="nav-item dropdown mx-2">
@@ -214,6 +224,28 @@
         </article>
       {% endfor %}
 
+    {% for k in kitchen_less %}
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="{{k.product_image.url}}"
+              alt="product"
+              class="product-img"
+            />
+            <form action="/cart">
+            <input type="hidden" name="pid" value={{k.id}} id="pid">
+            <button type="submit" class="bag-btn" style="background:rgb(255, 210, 8);">
+              <i class="fa fa-cart-plus" aria-hidden="true"></i>
+              ADD TO CART SOON!!!
+              </button>
+            </form> 
+          </div>
+          <h3>{{k.product_name}}</h3>
+          <h4>₹{{k.product_price}}0</h4>
+        </article>
+      {% endfor %}
+
+
       {% for k in kitchen_stockoff %}
         <article class="product">
           <div class="img-container">
@@ -223,7 +255,7 @@
               class="product-img"
             />
             <button type="submit" class="bag-btn" style="background:rgb(236, 84, 84);">
-              <i class="fas fa-shopping-cart"></i>
+              <i class="fa fa-times" aria-hidden="true"></i>
               Out Of Stock
             </button>
           </div>
@@ -261,6 +293,27 @@
         </article>
       {% endfor %}
 
+      {% for d in deo_less %}
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="{{d.product_image.url}}"
+              alt="product"
+              class="product-img"
+            />
+            <form action="/cart">
+            <input type="hidden" name="pid" value={{d.id}} id="pid">
+            <button type="submit" class="bag-btn" style="background:rgb(255, 210, 8);">
+              <i class="fa fa-cart-plus" aria-hidden="true"></i>
+              ADD TO CART SOON!!!
+              </button>
+            </form> 
+          </div>
+          <h3>{{d.product_name}}</h3>
+          <h4>₹{{d.product_price}}0</h4>
+        </article>
+      {% endfor %}
+
       {% for d in deo_stockoff %}
         <article class="product">
           <div class="img-container">
@@ -270,7 +323,7 @@
               class="product-img"
             />
             <button type="submit" class="bag-btn" style="background:rgb(236, 84, 84);">
-              <i class="fas fa-shopping-cart"></i>
+              <i class="fa fa-times" aria-hidden="true"></i>
               Out of Stock
             </button>
           </div>
@@ -308,6 +361,27 @@
         </article>
       {% endfor %}
 
+      {% for m in masala_less %}
+        <article class="product">
+          <div class="img-container">
+            <img
+              src="{{m.product_image.url}}"
+              alt="product"
+              class="product-img"
+            />
+            <form action="/cart">
+            <input type="hidden" name="pid" value={{m.id}} id="pid">
+            <button type="submit" class="bag-btn" style="background:rgb(255, 210, 8);">
+              <i class="fa fa-cart-plus" aria-hidden="true"></i>
+              ADD TO CART SOON!!!
+              </button>
+            </form> 
+          </div>
+          <h3>{{m.product_name}}</h3>
+          <h4>₹{{m.product_price}}0</h4>
+        </article>
+      {% endfor %}
+
     {% for bm in masala_stockoff %}
         <article class="product">
           <div class="img-container">
@@ -335,7 +409,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
-    <!-- Bootstrap Bundle with Popper -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
