--- a/IETE-Website/CSS/stlyes.css
+++ b/IETE-Website/CSS/stlyes.css
@@ -59,7 +59,7 @@ h1, h3{
 .about-us-desc
 {
   padding: 5%;
-  color: black;
+  color: #000;
   font-family: 'Montserrat', sans-serif;
 }
 .about-us-img
@@ -101,3 +101,172 @@ h1, h3{
  
   transform: rotateY(180deg);
 }
+
+.event-container
+{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.event-container .event-card{
+  position: relative;
+  width: 350px;
+  height: 560px;
+  background: #0c002b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+  box-shadow: 0 20px 50px rgba(0,0,0,0.2);
+  overflow: hidden;
+}
+/* .event-container .event-card::before{
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  bottom: 2px;
+  width: 50%;
+  background: rgba(255,255,255,0.1);
+} */
+.event-container .event-card .content{
+  padding: 15px;
+  text-align: center;
+}
+.event-container .event-card:hover{
+  transform: scale(1.1);
+}
+.event-container .event-card .content h2{
+  color:  #fff;
+  z-index: 1;
+  opacity: 1;
+  transition: 0.5s;
+  margin-top: 20px;
+}
+.event-container .event-card:hover .content h2{
+  opacity: 1;
+  transform: translateY(-10px);
+  color: #fff;
+}
+.event-container .event-card .content p{
+  color: #fff;
+  opacity: 1;
+
+}
+.event-container .event-card:hover .content p{
+  position: relative;
+  font-size: 1rem;
+  color: #fff;
+  z-index: 2;
+  opacity: 1;
+  /* font-weight: 300; */
+  transition: 0.5s;
+}
+.event-container .event-card .content a{
+  display: inline-block;
+  margin-top: 15px;
+  padding: 8px 15px;
+  background: #fff;
+  color: #0c002b;
+  text-decoration: none;
+  /* text-transform: uppercase; */
+  font-weight: 600;
+  overflow: hidden;
+}
+.event-container .event-card .content a:hover{
+  color: white;
+  background: #2196f3;
+  width: 100%;
+  box-shadow: 0 0 10px #2196f3, 0 0 40px #2196f3,0 0 80px #2196f3;
+}
+.event-container .event-card span{
+  transition: 0.5s;
+}
+.event-container .event-card span:nth-child(1)
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(to right,transparent,#1779ff);
+  animation: animate1 2s linear infinite;
+}
+@keyframes animate1{
+  0%{
+    transform: translateX(-100%);
+  }
+  100%{
+    transform: translateX(100%);
+  }
+}
+.event-container .event-card span:nth-child(2)
+{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 3px;
+  height: 100%;
+  background: linear-gradient(to bottom,transparent,#1779ff);
+  animation: animate2 2s linear infinite;
+  animation-delay: 1s;
+}
+@keyframes animate2{
+  0%{
+    transform: translateY(-100%);
+  }
+  100%{
+    transform: translateY(100%);
+  }
+}
+
+.event-container .event-card span:nth-child(3)
+{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(to left,transparent,#1779ff);
+  animation: animate3 2s linear infinite;
+  animation-delay: 2s;
+}
+@keyframes animate3{
+  0%{
+    transform: translateX(100%);
+  }
+  100%{
+    transform: translateX(-100%);
+  }
+}
+.event-container .event-card span:nth-child(4)
+{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 3px;
+  height: 100%;
+  background: linear-gradient(to top,transparent,#1779ff);
+  animation: animate4 2s linear infinite;
+  animation-delay: 3s;
+}
+@keyframes animate4{
+  0%{
+    transform: translateY(100%);
+  }
+  100%{
+    transform: translateY(-100%);
+  }
+}
+/*.event-container .event-card:nth-child(1)
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(to right,transparen,#1779ff);
+  animation: animate 2s linear infinite;
+} */
