--- a/EcommWeb/shop/templates/details.html
+++ b/EcommWeb/shop/templates/details.html
@@ -124,42 +124,114 @@
     </nav>
     <br />
   
-  <div class="container my-5">
-  <div class="row">
-  <div class="col-sm-6 text-center align-self-center mt-1">
-   <img src="{{product.product_image.url}}" alt="" class="img-fluid img-thumbnail">
-  </div>
-  <br>
-  <div class="col-sm-5 offset-sm-1">
-   <h2 align="center">{{product.product_name}}</h2>
+   {% for s in product_in_stock %}
+   <br>
+   <div class="row">
+    <div class="col-sm-6 text-center align-self-center mt-1">
+      <img src="{{s.product_image.url}}" alt="" class="img-fluid img-thumbnail mx-5">
+    </div>
+    <br>
+    <div class="col-sm-5 offset-sm-1">
+    <div class="new mx-4">
+    <br>
+   <h2 align="center">{{s.product_name}}</h2>
+   </div>
    <br>
    <div class="prices mt-2" align="center">
-   <h5 class="fw-light text-decoration-line-through">M.R.P.: ₹{{product.product_cutprice}}0</h5>
-   <h5>Deal Price₹{{product.product_price}}0<br><br>
+   <h5 class="fw-light text-decoration-line-through">M.R.P.: ₹{{s.product_cutprice}}0</h5>
+   <h5>Deal Price₹{{s.product_price}}0<br><br>
    
+   {% if item_in_cart %}
+    <a href="{% url 'displaycart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Go To Cart</a>
    
+   {% else %}
    <form action="/cart" class="d-inline">
             <input type="hidden" name="pid" value={{product.id}} id="pid">
     <button type="submit" class="btn btn-primary shadow px-5 py-2">Add to Cart</button>
     </form>
 
-
-
-   <a href="{% url 'aboutus' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
+  {% endif %}
+   
+   <a href="{% url 'ordersummary' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
    </div>
    <h5 class="mt-5">Available Offers</h5>
-   <ul>
-    <li>Bank Offer 5% Unlimited Cashback on Flipkart Axis Bank Credit</li>
-    <li>Special Price Get extra ₹3000 off (price inclusive of discount)</li>
-    <li>No cost EMI ₹1,667/month. Standard EMI also available</li>
-    <li>Partner Offer ₹2000 Flipkart Gift Card on Every 1000th Transaction with a new Visa Debit/Credit Card</li>
-   </ul>
+   <p>{{s.product_offers}}</p>
    <br>
-   <h4>Description:</h4><p>{{product.product_description}}</p> <br>
+   <h4>Description:</h4><p>{{s.product_description}}</p> <br>
+  </div>
+ </div>
+</div>
+   {% endfor %}
+
+
+  {% for sl in product_less %}
+  <div class="row">
+    <div class="col-sm-6 text-center align-self-center mt-1">
+   <img src="{{sl.product_image.url}}" alt="" class="img-fluid img-thumbnail">
+    </div>
+    <br>
+    <div class="col-sm-5 offset-sm-1">
+   <h2 align="center">{{sl.product_name}}</h2>
+   <br>
+   <div class="prices mt-2" align="center">
+   <div class="alert alert-primary mx-4" role="alert">
+  Items Less in Stock
+</div>
+   <h5 class="fw-light text-decoration-line-through">M.R.P.: ₹{{sl.product_cutprice}}0</h5>
+   <h5>Deal Price₹{{sl.product_price}}0<br><br>
+   
+   {% if item_in_cart %}
+    <a href="{% url 'displaycart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Go To Cart</a>
+   
+   
+   {% else %}
+   <form action="/cart" class="d-inline">
+            <input type="hidden" name="pid" value={{product.id}} id="pid">
+    <button type="submit" class="btn btn-primary shadow px-5 py-2">Add to Cart</button>
+    </form>
+
+  {% endif %}
+   <a href="{% url 'ordersummary' %}" class="btn btn-danger shadow px-5 py-2 ms-4">Buy Now</a>
+   </div>
+   <h5 class="mt-5">Available Offers</h5>
+   <p>{{sl.product_offers}}</p>
+   <br>
+   <h4>Description:</h4><p>{{sl.product_description}}</p> <br>
   </div>
  </div>
 </div>
 
+   {% endfor %}
+
+
+  {% for so in product_out_of_stock %}
+   <div class="row">
+    <div class="col-sm-6 text-center align-self-center mt-1">
+   <img src="{{so.product_image.url}}" alt="" class="img-fluid img-thumbnail">
+    </div>
+    <br>
+    <div class="col-sm-5 offset-sm-1">
+   <h2 align="center">{{so.product_name}}</h2>
+   <br>
+   <div class="prices mt-2" align="center">
+   <h5 class="fw-light text-decoration-line-through">M.R.P.: ₹{{so.product_cutprice}}0</h5>
+   <h5>Deal Price₹{{so.product_price}}0<br><br>
+
+   <div class="alert alert-danger mx-4" role="alert">
+  Item Not in Stock
+</div>
+
+   <h5 class="mt-5">Available Offers</h5>
+   <p>{{so.product_offers}}</p>
+   <br>
+   <h4>Description:</h4><p>{{so.product_description}}</p> <br>
+  </div>
+ </div>
+</div>
+   {% endfor %}
+
+  
+<br><br>
 <div class="container">
     <div class="row my-3">
     <div class="col-sm-6 offset-sm-3">
@@ -228,8 +300,7 @@
  </div>
 </div>
 
-  
-  
+
  <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -244,3 +315,5 @@
 
   </body>
 </html>
+
+
